# cmakelearning

backup/cmake/t2/: CMakeLists.txt
backup/cmake/t2/src/: main.cpp
backup/cmake/t3/: CMakeLists.txt
backup/cmake/t3/dest_1/: a.h
backup/cmake/t3/lib/: CMakeLists.txt  hello.cpp  hello.h
backup/cmake/t3/src/: CMakeLists.txt
backup/cmake/t5/: CMakeLists.txt
backup/cmake/t5/src/: CMakeLists.txt  main.c
backup/cmake/t6/: CMakeLists.txt  main.cpp
backup/cmake/t6/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
backup/cmake/t6/cmake/: FindHELLO.cmake
demo1/: CMakeCache.txt  Makefile  cmake_install.cmake  demo1
demo2/: CMakeCache.txt  Makefile  cmake_install.cmake  demo2
demo3/: CMakeCache.txt  Makefile  cmake_install.cmake  demo3
demo3/mylib/: Makefile  cmake_install.cmake
helloworldcv/: CMakeLists.txt
helloworldcv/include/: hello_cv1.h
helloworldcv/src/: hello_cv_1.cpp  main.cpp
test_cmake/: CMakeLists.txt
test_cpp/: CMakeLists.txt  addressbook.proto
test_cpp/protoc/: addressbook.pb.cc  addressbook.pb.h
test_cpp/src/: CMakeLists.txt  gtest.cpp  protoc_test.cpp
