find_package(GTest REQUIRED)
IF(GTEST_FOUND)
    add_executable(gtest gtest.cpp)
    INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(gtest ${GTEST_BOTH_LIBRARIES} pthread)
ELSE(GTEST_FOUND)
    message("Gtest not found")
ENDIF(GTEST_FOUND)

AUX_SOURCE_DIRECTORY(../protoc DIR_SRC)
find_package(Protobuf REQUIRED)
if(PROTOBUF_FOUND)
    add_executable(protoctest protoc_test.cpp ${DIR_SRC})
    INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(protoctest ${PROTOBUF_LIBRARIES})
else(PROTOBUF_FOUND)
    message("protobuf library not found!")
endif(PROTOBUF_FOUND)

