cmake_minimum_required(VERSION 3.10)
PROJECT(HELLO_T6)
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
#MESSAGE(${PROJECT_SOURCE_DIR})
FIND_PACKAGE(HELLO)
IF(HELLO_FOUND)
    ADD_EXECUTABLE(hello main.cpp)
    INCLUDE_DIRECTORIES(${HELLO_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(hello ${HELLO_LIBRARY})
ENDIF(HELLO_FOUND)